many many many many many many till Foam new struct

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,19 +1,20 @@
   <div id=n>
   <h2>Новинки</h2><DL>
-  <DT>31 июл:  <DD><a href="/catalog/cat264.shtml" title="Новый товар:&#xa;Маска сварщика КОРУНД-1,&#xa;фильтр АСФ 4/9-13 &laquo;Хамелеон&raquo;"><span class="title">Маска сварщика</span><span class="dop"> Хамелеон</span></a><br>
+  <DT>12 окт : <DD><a href="/catalog/cat430.shtml" title="Новые товары:&#xa;Клей-герметик универсальный эластичный Fix All (СОУДАЛ),&#xa;БЕЛЫЙ / ПРОЗРАЧНЫЙ, 290 мл"><span class="title">Герметик-клей</span><span class="dop"> Fix All</span></a><br>
+  <DT>10 окт : <DD><a href="/catalog/cat109.shtml" title="Новые товары:&#xa;Маркеры перманентные промышленные EDDING E-8750&#xa;для индустриальной графики, толщина линии 2,0-4,0 мм,&#xa;с пулевидным наконечником повышенной устойчивости к истиранию"><span class="title">Маркеры</span><span class="dop"> EDDING E-8750</span></a><br>
+  <DT>25 сен : <DD><a href="/catalog/cat27.shtml"  title="Цены снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1&#xa;пр-ва Лужского Абразивного завода,&#xa;125 мм, посадочный диаметр 22 мм,&#xa;зернистостью с P24 по Р120"><span class="title">Круги лепестковые</span><span class="dop"> КЛТ1</span></a><br>
+  <DT>19 сен : <DD><a href="/catalog/cat210.shtml" title="Новые товары:&#xa;Свёрла алмазные по керамограниту и керамике&#xa;трубчатые,&#xa;6-гранный либо цилиндрический хвостовик"><span class="title">Свёрла алмазные</span><span class="dop"> по керамике</span></a><br>
+  <DT>18 сен : <DD><a href="/catalog/cat240.shtml" title="Новые товары:&#xa;Абразивная сетка,&#xa;карбид кремния,&#xa;зернистостью с P40 по Р320"><span class="title">Абразивная сетка</span><span class="dop"></span></a><br>
+  <DT>02 сен : <DD><a href="/catalog/cat84.shtml"  title="Новые товары:&#xa;Ключи трубные рычажные цельнокованые GROSS,&#xa;CrV, усиленная конструкция, тип L (прямые губки)&#xa;с  № 0 по  № 4"><span class="title">Ключи трубные (КТР)</span><span class="dop"> GROSS</span></a><br>
+  <DT>21 авг : <DD><a href="/catalog/cat260.shtml" title="Расширен ассортимент:&#xa;Ломы-гвоздодеры, двухтавровый профиль,&#xa;добавлен размер 450 х 29 х 16 мм"><span class="title">Ломы-гвоздодеры</span><span class="dop"></span></a><br>
+  <DT>18 авг : <DD><a href="/catalog/cat549.shtml" title="Новые товары:&#xa;Круги зачистные синтетические (коралловые)&#xa;125 х 22.2 мм РОСОМАХА"><span class="title">Круги зачистные коралловые</span><span class="dop"></span></a><br>
+  <DT>31 июл:  <DD><a href="/catalog/cat264.shtml" title="Новый товар:&#xa;Маска сварщика КОРУНД-1,&#xa;автоматически затеняемый&#xa;светофильтр АСФ 4/9-13 &laquo;Хамелеон&raquo;"><span class="title">Маска сварщика</span><span class="dop"> Хамелеон</span></a><br>
   <DT>24 июл:  <DD><a href="/catalog/cat256.shtml" title="ЗНАЧИТЕЛЬНО расширен ассортимент:&#xa;Отвертки POINT, CrV,&#xa;крестовые и плоские"><span class="title">Отвертки</span><span class="dop"> POINT, CrV</span></a><br>
   <DT>21 июл:  <DD><a href="/catalog/cat45.shtml"  title="Новые товары:&#xa;Электроды сварочные пр-ва СЗСМ:&#xa;МР-3С, ОЗС-12, УОНИ 13/55&#xa;&empty; 3 и 4 мм"><span class="title">Электроды сварочные</span><span class="dop"></span></a><br>
   <DT>17 июл:  <DD><a href="/catalog/cat176.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Силикон строительный универсальный `Profil`, 280 мл;&#xa;Цвета: белый, прозрачный"><span class="title">Силикон универс.</span><span class="dop"> Profil, 280 мл</span></a><br>
   <DT>12 июл:  <DD><a href="/catalog/cat545.shtml" title="Новые товары:&#xa;Круги абразивные самозакрепляющиеся&#xa;на липучке (`самолипы`) перфорированные, 8 отверстий"><span class="title">Круги абразивные на липучке</span></a><br>
   <DT>11 июл:  <DD><a href="/catalog/cat422.shtml" title="Новые товары:&#xa;Свёрла по дереву спиральные (винтовые),&#xa;сталь HCS, 6-гранный хвостовик"><span class="title">Свёрла по дереву спиральные</span></a><br>
   <DT>03 июл:  <DD><a href="/catalog/cat148.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Кисти плоские флейцевые КФ для лакокрасочных материалов на водной основе&#xa;Искусственное расщепленное волокно &laquo;Канекарон&raquo;&#xa;Пластиковая рукоятка"><span class="title">Кисти</span></a> <a href="/catalog/cat569.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Кисти плоские флейцевые КФ для всех типов лаков и красок,&#xa;натуральная светлая щетина, деревянная рукоятка"><span class="title">плоские</span></a><span class="dop"> флейцевые КФ</span><br>
-  <DT>28 июн:  <DD><a href="/catalog/cat158.shtml" title="Новые товары:&#xa;Плащи нейлоновые, прошитые швы, размер XL&#xa;Цвета: синий, желтый, зеленый"><span class="title">Плащи нейлоновые</span><span class="dop"></span></a><br>
-  <DT>13 июн:  <DD><a href="/catalog/cat246.shtml" title="Цены снижены: Болты DIN 933 оцинкованные, полная резьба,&#xa;от 6х20 до 20х200 мм, на развес"><span class="title">Болты DIN 933</span><span class="dop"> оцинкованные</span></a><br>
-  <DT>07 июн:  <DD><a href="/catalog/cat297.shtml" title="Новый товар:&#xa;Рукав кислородный ПРЕМИУМ,&#xa;  диаметр 9.0 мм, бухта 40 м"><span class="title">Рукав для газовой сварки</span><span class="dop"></span></a><br>
-  <DT>06 июн:  <DD><a href="/catalog/cat180.shtml" title="Новые товары: Газовые редукторы и горелки:&#xa; - Редуктор пропановый БПО-5-3;&#xa; - Горелка пропановая ГЗУ-3-23"><span class="title">Газовые редукторы и горелки</span><span class="dop"></span></a><br>
-  <DT>25 мая:  <DD><a href="/catalog/cat374.shtml" title="Новые товары:&#xa;Щетки тротуарные с металлическим держателем черенка&#xa;ширина 500, 600, 700 мм"><span class="title">Щетки тротуарные</span><span class="dop"></span></a><br>
-  <DT>15 мая:  <DD><a href="/catalog/cat29.shtml"  title="Новые товары:&#xa;Диски пильные по дереву для УШМ `РемоКолор professional`"><span class="title">Диски пильные по дереву</span><span class="dop">/УШМ</span></a><br>
-  <DT>07 апр:  <DD><a href="/catalog/cat109.shtml" title="Расширен ассортимент строительных промышленных маркеров:&#xa;Маркер перманентный и Маркер-краска &laquo;BRAUBERG&raquo;"><span class="title">Промышленные маркеры</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
@@ -31,13 +32,13 @@
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/foam/big/113986.jpg" title="Большое фото:&#xa;Пена монтажная пистолетная профессиональная&#xa;"Yellow"     SOUDAL, 750 мл">
-        <img src="/img/pic/foam/small/113986.jpg" width="98"></a></td>
-      <td class="good-txt"><a href="/catalog/cat175.shtml"
-        title="Пена монтажная пистолетная профессиональная&#xa;`Yellow` SOUDAL, 750 мл &#xa;на нашем сайте">
+        href="/img/pic/equip/big/plenka.jpg" title="Большое фото:&#xa;Пленка полиэтиленовая техническая&#xa;в рукав-рулонах 1.5 х 100 м (300 кв.м)">
+        <img src="/img/pic/equip/small/plenka.jpg" width="98"></a></td>
+      <td class="good-txt"><a href="/catalog/cat117.shtml"
+        title="Пленка полиэтиленовая техническая&#xa;в рукав-рулонах 1.5 х 100 м (300 кв.м) на нашем сайте">
         <p>
-          <span class="title">Пена монтажная пистолетная профессиональная</span><span class="dop"><br>"Yellow" SOUDAL,</span>
-          <br><span class="addt">безопасная для тонких профилей из ПВХ,<br>750 мл,<br>летняя и зимняя</span>
+          <span class="title">Пленка полиэтиленовая техническая</span>
+          <br><span class="addt">в рукав-рулонах<br>1.5 х 100 м (300 кв.м), 100/150/200 мкм</span>
         </p></a></td></table>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
@@ -53,8 +54,8 @@
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/krep/big/Gvozdi stroitelnye.jpg" title="Большое фото: Гвозди строительные">
-        <img src="/img/pic/krep/small/Gvozdi stroitelnye2.jpg" width="98"></a></td>
+        href="/img/pic/krep/big/gvozdi_stroitelnye.jpg" title="Большое фото: Гвозди строительные">
+        <img src="/img/pic/krep/small/gvozdi_stroitelnye.jpg" width="98"></a></td>
       <td class="good-txt"><a href="/catalog/cat14.shtml"
         title="Гвозди строительные на нашем сайте">
         <p>
