--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -1,6 +1,14 @@
 <div id=n>
   <h2>Новинки</h2><DL>
   <!-- ^ 2023 ^ -->
+  <DT>22 авг : <DD><a href="/catalog/cat28.shtml"  title="Расширен ассортимент:&#xa;Диски отрезные алмазные по армированному бетону,&#xa;сплошные и сегментные, 125 / 230 мм"><span class="title">Диски отрезные алмазные</span><span class="dop"></span></a><br>
+  <DT>28 июн:  <DD><a href="/catalog/cat158.shtml" title="Новые товары:&#xa;Плащи нейлоновые, прошитые швы, размер XL&#xa;Цвета: синий, желтый, зеленый"><span class="title">Плащи нейлоновые</span><span class="dop"></span></a><br>
+  <DT>13 июн:  <DD><a href="/catalog/cat246.shtml" title="Цены снижены: Болты DIN 933 оцинкованные, полная резьба,&#xa;от 6х20 до 20х200 мм, на развес"><span class="title">Болты DIN 933</span><span class="dop"> оцинкованные</span></a><br>
+  <DT>07 июн:  <DD><a href="/catalog/cat297.shtml" title="Новый товар:&#xa;Рукав кислородный ПРЕМИУМ,&#xa;  диаметр 9.0 мм, бухта 40 м"><span class="title">Рукав для газовой сварки</span><span class="dop"></span></a><br>
+  <DT>06 июн:  <DD><a href="/catalog/cat180.shtml" title="Новые товары: Газовые редукторы и горелки:&#xa; - Редуктор пропановый БПО-5-3;&#xa; - Горелка пропановая ГЗУ-3-23"><span class="title">Газовые редукторы и горелки</span><span class="dop"></span></a><br>
+  <DT>25 мая : <DD><a href="/catalog/cat374.shtml" title="Новые товары:&#xa;Щетки тротуарные с металлическим держателем черенка&#xa;ширина 500, 600, 700 мм"><span class="title">Щетки тротуарные</span><span class="dop"></span></a><br>
+  <DT>15 мая : <DD><a href="/catalog/cat29.shtml"  title="Новые товары:&#xa;Диски пильные по дереву для УШМ `РемоКолор professional`"><span class="title">Диски пильные по дереву</span><span class="dop">/УШМ</span></a><br>
+  <DT>07 апр : <DD><a href="/catalog/cat109.shtml" title="Расширен ассортимент строительных промышленных маркеров:&#xa;Маркер перманентный и Маркер-краска &laquo;BRAUBERG&raquo;"><span class="title">Промышленные маркеры</span><span class="dop"></span></a><br>
   <DT>28 мар:  <DD><a href="/catalog/cat86.shtml"  title="Новые товары:&#xa;Перчатки Х/Б с двойным латексным покрытием ладони ПРОФИ ЛЮКС"><span class="title">Перчатки Х/Б</span><span class="dop"> двойной латекс</span></a><br>
   <DT>01 мар:  <DD><a href="/catalog/cat209.shtml" title="Новые товары:&#xa;свёрла по стеклу, керамике и керамограниту,&#xa;2 и 4 режущие грани, &empty; 3 - 16 мм"><span class="title">Свёрла по стеклу и керамике</span><span class="dop"></span></a><br>
   <DT>28 фев:  <DD><a href="/catalog/cat299.shtml" title="Новые товары:&#xa;Коронки алмазные с центрирующим сверлом по керамограниту и керамике,&#xa;&empty; 20 - 100 мм"><span class="title">Коронки алмазные</span><span class="dop"> по керамике</span></a><br>
