many many many many many many till Val + H

--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,5 +1,6 @@
   <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>31 окт : <DD><a href="/catalog/cat89.shtml"  title="Новые товары:&#xa;Краги сварщика спилковые `ТРЕК` красные&#xa;на подкладке, утепленные"><span class="title">Краги сварщика</span><span class="dop"> утепленные</span></a><br>
   <DT>12 окт : <DD><a href="/catalog/cat430.shtml" title="Новые товары:&#xa;Клей-герметик универсальный эластичный Fix All (СОУДАЛ),&#xa;БЕЛЫЙ / ПРОЗРАЧНЫЙ, 290 мл"><span class="title">Герметик-клей</span><span class="dop"> Fix All</span></a><br>
   <DT>10 окт : <DD><a href="/catalog/cat109.shtml" title="Новые товары:&#xa;Маркеры перманентные промышленные EDDING E-8750&#xa;для индустриальной графики, толщина линии 2,0-4,0 мм,&#xa;с пулевидным наконечником повышенной устойчивости к истиранию"><span class="title">Маркеры</span><span class="dop"> EDDING E-8750</span></a><br>
   <DT>25 сен : <DD><a href="/catalog/cat27.shtml"  title="Цены снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1&#xa;пр-ва Лужского Абразивного завода,&#xa;125 мм, посадочный диаметр 22 мм,&#xa;зернистостью с P24 по Р120"><span class="title">Круги лепестковые</span><span class="dop"> КЛТ1</span></a><br>
