many many many many many many till Cables

--- a/-chg/ssi/infoblk.html
+++ b/-chg/ssi/infoblk.html
@@ -10,3 +10,10 @@
   <a href="/about/contact.shtml#map" title="Схема проезда">Москва, ул. Южнопортовая, д. 13, стр. 2</a></p>
   <p class="adres time">С понедельника по пятницу, с <b>9</b> до <b>17</b></p>
   <p class="adres cm">Заявки онлайн круглосуточно
+
+<td class="top-main"><a class="phone phonea" href="tel:+74952210487"><p class="phones">(925) 799-55-71<br>
+  (985) 492-55-01</p></a>
+
+<div class="call bot"><em><nobr>Телефоны: </nobr> (925) 799-55-71,
+  <br><span style="padding-left:  5.5em">(985) 492-55-01
+</em></div>
