--- a/csv/000news/iblck.html
+++ b/csv/000news/iblck.html
@@ -1,21 +1,21 @@
   <div id=n>
   <h2>Новинки</h2><DL>
+  <DT>13 мая:  <DD><a href="/catalog/cat621.shtml" title="Новые товары: Маркер аэрокосмический&#xa;EDDING E-8404, толщина линии 0.75 мм"><span class="title">Маркер</span><span class="dop"> EDDING E-8404, 0.75 мм</span></a><br>
+  <DT>29 фев:  <DD><a href="/catalog/cat336.shtml" title="РАСПРОДАЖА: Свёрла по металлу,&#xa;быстрорежущая сталь (HSS), цилиндрический хвостовик,&#xa;диаметр от 2.1 до 15.5 мм"><span class="title">Распродажа свёрел по металлу</span><span class="dop"></span></a><br>
+  <DT>26 фев:  <DD><a href="/catalog/cat20.shtml"  title="РАСПРОДАЖА: Дюбели с шурупом для быстрого монтажа (дюбель-гвозди)&#xa;8 х 45 мм с потайным бортиком"><span class="title">Дюбель-гвозди</span><span class="dop"> 8 х 45 мм</span></a><br>
+  <DT>21 фев:  <DD><a href="/catalog/cat188.shtml" title="РАСПРОДАЖА &ndash; цена ЗНАЧИТЕЛЬНО снижена:&#xa;Скобы для степлера закалённые MATRIX,&#xa;тип 53, высота 10 мм, уп. 1000 шт."><span class="title">Скобы для степлера</span><span class="dop"> тип 53</span></a><br>
+  <DT>02 фев:  <DD><a href="/catalog/cat18.shtml"  title="Цена ЗНАЧИТЕЛЬНО снижена:&#xa;Саморез по дереву, гипсокартону и тонкому металлу оксидированный&#xa;3.5 х 19 мм"><span class="title">Саморез по дереву 3.5 х 19 мм</span><span class="dop"></span></a><br>
+  <DT>20 дек : <DD><a href="/catalog/cat14.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены: Гвозди строительные, ГОСТ 4028-80"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
+  <DT>04 дек : <DD><a href="/catalog/cat393.shtml" title="Новые товары:&#xa;Диски алмазные турбо-сегментные по армированному бетону&#xa;Trio Diamond Grand Ultra Turbo-Segment"><span class="title">Диски алмазные по арм.бетону</span><span class="dop"></span></a><br>
   <DT>31 окт : <DD><a href="/catalog/cat89.shtml"  title="Новые товары:&#xa;Краги сварщика спилковые `ТРЕК` красные&#xa;на подкладке, утепленные"><span class="title">Краги сварщика</span><span class="dop"> утепленные</span></a><br>
   <DT>12 окт : <DD><a href="/catalog/cat430.shtml" title="Новые товары:&#xa;Клей-герметик универсальный эластичный Fix All (СОУДАЛ),&#xa;БЕЛЫЙ / ПРОЗРАЧНЫЙ, 290 мл"><span class="title">Герметик-клей</span><span class="dop"> Fix All</span></a><br>
-  <DT>10 окт : <DD><a href="/catalog/cat109.shtml" title="Новые товары:&#xa;Маркеры перманентные промышленные EDDING E-8750&#xa;для индустриальной графики, толщина линии 2,0-4,0 мм,&#xa;с пулевидным наконечником повышенной устойчивости к истиранию"><span class="title">Маркеры</span><span class="dop"> EDDING E-8750</span></a><br>
+  <DT>10 окт : <DD><a href="/catalog/cat622.shtml" title="Новые товары:&#xa;Маркеры перманентные промышленные EDDING E-8750&#xa;для индустриальной графики, толщина линии 2,0-4,0 мм,&#xa;с пулевидным наконечником повышенной устойчивости к истиранию"><span class="title">Маркеры</span><span class="dop"> EDDING E-8750</span></a><br>
   <DT>25 сен : <DD><a href="/catalog/cat27.shtml"  title="Цены снижены:&#xa;Круги лепестковые торцевые шлифовальные КЛТ1&#xa;пр-ва Лужского Абразивного завода,&#xa;125 мм, посадочный диаметр 22 мм,&#xa;зернистостью с P24 по Р120"><span class="title">Круги лепестковые</span><span class="dop"> КЛТ1</span></a><br>
   <DT>19 сен : <DD><a href="/catalog/cat210.shtml" title="Новые товары:&#xa;Свёрла алмазные по керамограниту и керамике&#xa;трубчатые,&#xa;6-гранный либо цилиндрический хвостовик"><span class="title">Свёрла алмазные</span><span class="dop"> по керамике</span></a><br>
   <DT>18 сен : <DD><a href="/catalog/cat240.shtml" title="Новые товары:&#xa;Абразивная сетка,&#xa;карбид кремния,&#xa;зернистостью с P40 по Р320"><span class="title">Абразивная сетка</span><span class="dop"></span></a><br>
   <DT>02 сен : <DD><a href="/catalog/cat84.shtml"  title="Новые товары:&#xa;Ключи трубные рычажные цельнокованые GROSS,&#xa;CrV, усиленная конструкция, тип L (прямые губки)&#xa;с  № 0 по  № 4"><span class="title">Ключи трубные (КТР)</span><span class="dop"> GROSS</span></a><br>
   <DT>21 авг : <DD><a href="/catalog/cat260.shtml" title="Расширен ассортимент:&#xa;Ломы-гвоздодеры, двухтавровый профиль,&#xa;добавлен размер 450 х 29 х 16 мм"><span class="title">Ломы-гвоздодеры</span><span class="dop"></span></a><br>
   <DT>18 авг : <DD><a href="/catalog/cat549.shtml" title="Новые товары:&#xa;Круги зачистные синтетические (коралловые)&#xa;125 х 22.2 мм РОСОМАХА"><span class="title">Круги зачистные коралловые</span><span class="dop"></span></a><br>
-  <DT>31 июл:  <DD><a href="/catalog/cat264.shtml" title="Новый товар:&#xa;Маска сварщика КОРУНД-1,&#xa;автоматически затеняемый&#xa;светофильтр АСФ 4/9-13 &laquo;Хамелеон&raquo;"><span class="title">Маска сварщика</span><span class="dop"> Хамелеон</span></a><br>
-  <DT>24 июл:  <DD><a href="/catalog/cat256.shtml" title="ЗНАЧИТЕЛЬНО расширен ассортимент:&#xa;Отвертки POINT, CrV,&#xa;крестовые и плоские"><span class="title">Отвертки</span><span class="dop"> POINT, CrV</span></a><br>
-  <DT>21 июл:  <DD><a href="/catalog/cat45.shtml"  title="Новые товары:&#xa;Электроды сварочные пр-ва СЗСМ:&#xa;МР-3С, ОЗС-12, УОНИ 13/55&#xa;&empty; 3 и 4 мм"><span class="title">Электроды сварочные</span><span class="dop"></span></a><br>
-  <DT>17 июл:  <DD><a href="/catalog/cat176.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Силикон строительный универсальный `Profil`, 280 мл;&#xa;Цвета: белый, прозрачный"><span class="title">Силикон универс.</span><span class="dop"> Profil, 280 мл</span></a><br>
-  <DT>12 июл:  <DD><a href="/catalog/cat545.shtml" title="Новые товары:&#xa;Круги абразивные самозакрепляющиеся&#xa;на липучке (`самолипы`) перфорированные, 8 отверстий"><span class="title">Круги абразивные на липучке</span></a><br>
-  <DT>11 июл:  <DD><a href="/catalog/cat422.shtml" title="Новые товары:&#xa;Свёрла по дереву спиральные (винтовые),&#xa;сталь HCS, 6-гранный хвостовик"><span class="title">Свёрла по дереву спиральные</span></a><br>
-  <DT>03 июл:  <DD><a href="/catalog/cat148.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Кисти плоские флейцевые КФ для лакокрасочных материалов на водной основе&#xa;Искусственное расщепленное волокно &laquo;Канекарон&raquo;&#xa;Пластиковая рукоятка"><span class="title">Кисти</span></a> <a href="/catalog/cat569.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Кисти плоские флейцевые КФ для всех типов лаков и красок,&#xa;натуральная светлая щетина, деревянная рукоятка"><span class="title">плоские</span></a><span class="dop"> флейцевые КФ</span><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
   <h2>Рекомендуемые товары</h2>
@@ -44,13 +44,13 @@
   <table class="one-good" cellpadding="0">
     <tr valign="top">
       <td align="center" width=1><a class="cboxElement"
-        href="/img/pic/abraz/big/almazny_disc_rosomaha.jpg" title="Большое фото:&#xa;Диск алмазный по керамике супертонкий&#xa;РОСОМАХА, мокрый рез">
-        <img src="/img/pic/abraz/small/almazny_disc_rosomaha.jpg" width="98"></a></td>
-      <td class="good-txt"><a href="/catalog/cat28.shtml"
-        title="Диск алмазный по керамике супертонкий&#xa;РОСОМАХА, мокрый рез&#xa;на нашем сайте">
+        href="/img/pic/abraz/big/GTS736.jpg" title="Большое фото:&#xa;Диск алмазный турбо-сегментный по армированному бетону&#xa;Trio Diamond Grand Ultra Turbo-Segment">
+        <img src="/img/pic/abraz/small/GTS736w.jpg" width="98"></a></td>
+      <td class="good-txt"><a href="/catalog/cat393.shtml"
+        title="Диск алмазный турбо-сегментный по армированному бетону&#xa;Trio Diamond Grand Ultra Turbo-Segment&#xa;на нашем сайте">
         <p>
-          <span class="title">Диски алмазные</span><span class="dop"><br>РОСОМАХА</span>
-          <br><span class="addt">сегментные,<br>ТУРБО<br>и супертонкие<br>(по керамике)</span>
+          <span class="title">Диски алмазные</span><span class="dop"><br>Trio Diamond<br>Grand Ultra</span>
+          <br><span class="addt">турбо-сегментные<br>по армированному бетону</span>
         </p></a></td></table>
   <table class="one-good" cellpadding="0">
     <tr valign="top">
