--- a/csv/000news/iblckold.html
+++ b/csv/000news/iblckold.html
@@ -2,6 +2,13 @@
   <h2>Новинки</h2><DL>
   <!-- ^ 2023 ^ -->
   <DT>22 авг : <DD><a href="/catalog/cat28.shtml"  title="Расширен ассортимент:&#xa;Диски отрезные алмазные по армированному бетону,&#xa;сплошные и сегментные, 125 / 230 мм"><span class="title">Диски отрезные алмазные</span><span class="dop"></span></a><br>
+  <DT>31 июл:  <DD><a href="/catalog/cat264.shtml" title="Новый товар:&#xa;Маска сварщика КОРУНД-1,&#xa;автоматически затеняемый&#xa;светофильтр АСФ 4/9-13 &laquo;Хамелеон&raquo;"><span class="title">Маска сварщика</span><span class="dop"> Хамелеон</span></a><br>
+  <DT>24 июл:  <DD><a href="/catalog/cat256.shtml" title="ЗНАЧИТЕЛЬНО расширен ассортимент:&#xa;Отвертки POINT, CrV,&#xa;крестовые и плоские"><span class="title">Отвертки</span><span class="dop"> POINT, CrV</span></a><br>
+  <DT>21 июл:  <DD><a href="/catalog/cat45.shtml"  title="Новые товары:&#xa;Электроды сварочные пр-ва СЗСМ:&#xa;МР-3С, ОЗС-12, УОНИ 13/55&#xa;&empty; 3 и 4 мм"><span class="title">Электроды сварочные</span><span class="dop"></span></a><br>
+  <DT>17 июл:  <DD><a href="/catalog/cat176.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Силикон строительный универсальный `Profil`, 280 мл;&#xa;Цвета: белый, прозрачный"><span class="title">Силикон универс.</span><span class="dop"> Profil, 280 мл</span></a><br>
+  <DT>12 июл:  <DD><a href="/catalog/cat545.shtml" title="Новые товары:&#xa;Круги абразивные самозакрепляющиеся&#xa;на липучке (`самолипы`) перфорированные, 8 отверстий"><span class="title">Круги абразивные на липучке</span></a><br>
+  <DT>11 июл:  <DD><a href="/catalog/cat422.shtml" title="Новые товары:&#xa;Свёрла по дереву спиральные (винтовые),&#xa;сталь HCS, 6-гранный хвостовик"><span class="title">Свёрла по дереву спиральные</span></a><br>
+  <DT>03 июл:  <DD><a href="/catalog/cat148.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Кисти плоские флейцевые КФ для лакокрасочных материалов на водной основе&#xa;Искусственное расщепленное волокно &laquo;Канекарон&raquo;&#xa;Пластиковая рукоятка"><span class="title">Кисти</span></a> <a href="/catalog/cat569.shtml" title="Цены ЗНАЧИТЕЛЬНО снижены:&#xa;Кисти плоские флейцевые КФ для всех типов лаков и красок,&#xa;натуральная светлая щетина, деревянная рукоятка"><span class="title">плоские</span></a><span class="dop"> флейцевые КФ</span><br>
   <DT>28 июн:  <DD><a href="/catalog/cat158.shtml" title="Новые товары:&#xa;Плащи нейлоновые, прошитые швы, размер XL&#xa;Цвета: синий, желтый, зеленый"><span class="title">Плащи нейлоновые</span><span class="dop"></span></a><br>
   <DT>13 июн:  <DD><a href="/catalog/cat246.shtml" title="Цены снижены: Болты DIN 933 оцинкованные, полная резьба,&#xa;от 6х20 до 20х200 мм, на развес"><span class="title">Болты DIN 933</span><span class="dop"> оцинкованные</span></a><br>
   <DT>07 июн:  <DD><a href="/catalog/cat297.shtml" title="Новый товар:&#xa;Рукав кислородный ПРЕМИУМ,&#xa;  диаметр 9.0 мм, бухта 40 м"><span class="title">Рукав для газовой сварки</span><span class="dop"></span></a><br>
@@ -1029,4 +1036,15 @@
       <p>
         <span class="title">Пена монтажная пистолетная профессиональная</span><span class="dop"><br>Sila Pro TopGun 65 Winter,</span>
         <span class="addt"> 875 мл</span>
+      </p></a></td></table>
+<table class="one-good" cellpadding="0">
+  <tr valign="top">
+    <td align="center" width=1><a class="cboxElement"
+      href="/img/pic/abraz/big/almazny_disc_rosomaha.jpg" title="Большое фото:&#xa;Диск алмазный по керамике супертонкий&#xa;РОСОМАХА, мокрый рез">
+      <img src="/img/pic/abraz/small/almazny_disc_rosomaha.jpg" width="98"></a></td>
+    <td class="good-txt"><a href="/catalog/cat28.shtml"
+      title="Диск алмазный по керамике супертонкий&#xa;РОСОМАХА, мокрый рез&#xa;на нашем сайте">
+      <p>
+        <span class="title">Диски алмазные</span><span class="dop"><br>РОСОМАХА</span>
+        <br><span class="addt">сегментные,<br>ТУРБО<br>и супертонкие<br>(по керамике)</span>
       </p></a></td></table>
